set(EXE_SOURCES_1
    exercise_7.cpp)

set(EXE_SOURCES_2
    exercise_8.cpp
    printName.hpp
    printName.cpp)

set(EXE_SOURCES_3
    activity_7.cpp)

set(EXE_SOURCES_4
    exercise_9.cpp)

set(EXE_SOURCES_5
    activity_8.cpp)

set(EXE_SOURCES_6
    activity_9.cpp)

add_executable(${EX_11} ${EXE_SOURCES_1})
add_executable(${EX_12} ${EXE_SOURCES_2})
add_executable(${EX_13} ${EXE_SOURCES_3})
add_executable(${EX_14} ${EXE_SOURCES_4})
add_executable(${EX_15} ${EXE_SOURCES_5})
add_executable(${EX_16} ${EXE_SOURCES_6})



