set(EXE_SOURCES_1
    exercise_11.cpp)

set(EXE_SOURCES_2
    activity_13.cpp)

set(EXE_SOURCES_3
    activity_14.cpp)

set(EXE_SOURCES_4
    activity_15.cpp)

set(EXE_SOURCES_5
    activity_16.cpp)

# set(EXE_SOURCES_6
#     activity_9.cpp)

# set(EXE_SOURCES_7
#     exercise_10.cpp
# )

# set(EXE_SOURCES_8
#     activity_10.cpp
# )

# set(EXE_SOURCES_9
#     activity_11.cpp
# )

# set(EXE_SOURCES_10
#     activity_12.cpp
# )

add_executable(${EX_21} ${EXE_SOURCES_1})
add_executable(${EX_22} ${EXE_SOURCES_2})
add_executable(${EX_23} ${EXE_SOURCES_3})
add_executable(${EX_24} ${EXE_SOURCES_4})
add_executable(${EX_25} ${EXE_SOURCES_5})
# add_executable(${EX_16} ${EXE_SOURCES_6})
# add_executable(${EX_17} ${EXE_SOURCES_7})
# add_executable(${EX_18} ${EXE_SOURCES_8})
# add_executable(${EX_19} ${EXE_SOURCES_9})
# add_executable(${EX_20} ${EXE_SOURCES_10})



