set(EXE_SOURCES_1
    activity_19.cpp)

set(EXE_SOURCES_2
    activity_20.cpp)

set(EXE_SOURCES_3
    activity_21.cpp)

set(EXE_SOURCES_4
    exercise_12.cpp)


add_executable(${EX_28} ${EXE_SOURCES_1})
add_executable(${EX_29} ${EXE_SOURCES_2})
add_executable(${EX_30} ${EXE_SOURCES_3})
add_executable(${EX_31} ${EXE_SOURCES_4})
# add_executable(${EX_23} ${EXE_SOURCES_3})
# add_executable(${EX_24} ${EXE_SOURCES_4})
# add_executable(${EX_25} ${EXE_SOURCES_5})
# add_executable(${EX_26} ${EXE_SOURCES_6})
# add_executable(${EX_27} ${EXE_SOURCES_7})




