set(EXE_SOURCES_1
    activity_19.cpp)

set(EXE_SOURCES_2
    activity_20.cpp)

set(EXE_SOURCES_3
    activity_21.cpp)

set(EXE_SOURCES_4
    exercise_12.cpp)

set(EXE_SOURCES_5
    exercise_13.cpp)

set(EXE_SOURCES_6
    exercise_14.cpp)

set(EXE_SOURCES_7
    activity_22.cpp)

set(EXE_SOURCES_8
    exercise_15.cpp)
    
set(EXE_SOURCES_9
    exercise_16.cpp)

set(EXE_SOURCES_10
    exercise_17.cpp)

set(EXE_SOURCES_11
    exercise_18.cpp)


add_executable(${EX_28} ${EXE_SOURCES_1})
add_executable(${EX_29} ${EXE_SOURCES_2})
add_executable(${EX_30} ${EXE_SOURCES_3})
add_executable(${EX_31} ${EXE_SOURCES_4})
add_executable(${EX_32} ${EXE_SOURCES_5})
add_executable(${EX_33} ${EXE_SOURCES_6})
add_executable(${EX_34} ${EXE_SOURCES_7})
add_executable(${EX_35} ${EXE_SOURCES_8})
add_executable(${EX_36} ${EXE_SOURCES_9})
add_executable(${EX_37} ${EXE_SOURCES_10})
add_executable(${EX_38} ${EXE_SOURCES_11})





