set(EXE_SOURCES_1
    exercise_20.cpp)

set(EXE_SOURCES_2
    exercise_21.cpp)

set(EXE_SOURCES_3
    activity_23.cpp)

set(EXE_SOURCES_4
    exercise_22.cpp)

set(EXE_SOURCES_5
    activity_24.cpp)

add_executable(${EX_40} ${EXE_SOURCES_1})
add_executable(${EX_41} ${EXE_SOURCES_2})
add_executable(${EX_42} ${EXE_SOURCES_3})
add_executable(${EX_43} ${EXE_SOURCES_4})
add_executable(${EX_44} ${EXE_SOURCES_5})





